--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -6,20 +6,16 @@
         <!--Navbar-->
         <div class="navbar h-24 w-full flex flex-row justify-between items-center mb-24 bg-gradient-to-r from-maroon to-maroon-dark shadow-gray-600 shadow-xl">
           <!--settings icon--> 
-          <a href="/settings">
           <img
             src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
             class="object-contain object-left flex ml-8 mr-20 h-12"
           />
-          </a>
 
           <!--logo-->
-          <a href="/home" class="object-contain h-full">
           <img 
             src="https://cdn.discordapp.com/attachments/1286925382632865804/1290021310797189271/Dormie_app_Gray.png?ex=66faf177&is=66f99ff7&hm=08162744a28d74d86402a2a69e227a5c38003eb9ad7a1f7f0834b4fb6b8c16aa&"
             class="object-contain h-full"
           />
-          </a>
 
           <!--text and search icon-->
           <div class="flex flex-row">
@@ -28,13 +24,13 @@
               src="https://cdn.discordapp.com/attachments/1280355262976360490/1290168712434941952/Magnifying_Glass.png?ex=66fb7abf&is=66fa293f&hm=bda1474115b60cad013937e3348c359704c6cec6dc9c67886fa31112daf135cd&"
               class="object-contain object-right mr-8 h-12"
             />
-        </a>
-            <a href="/chats">
+            </a>
+          <a href="/chats">
             <img
               src="https://cdn.discordapp.com/attachments/1280355262976360490/1289826503818739762/communication.png?ex=66fa3c0a&is=66f8ea8a&hm=59f51764c7018fe1385d996ebb89a88666dd0810ffbe04016f40385015f1fe0e&"
-              class="object-contain object-right mr-8 h-12" 
+              class="object-contain object-right mr-8 h-12"
             />
-        </a>
+          </a>
           </div>
           
         </div>
@@ -52,13 +48,13 @@
                 <div class="max-w-sm w-full lg:max-w-full lg:flex shadow-gray-600 shadow-lg">
                     <div class="lg:h-auto lg:w-48 flex-none border-gray-400 lg:border-l lg:border-t lg:border-b lg:border-r lg:border-gray-400 bg-white text-center ">
                       <img
-                          src="<%= user.uploadedFile ? 'uploads/' + user.uploadedFile : 'images/defaultpfp.jpg' %>"
+                          src="https://st2.depositphotos.com/1054749/6808/i/450/depositphotos_68088587-stock-photo-portrait-of-a-young-african.jpg"
                           class="h-full object-none object-center shaowd-lg rounded-l lg:rounded-l lg:rounded-t"
                       />
                     </div>
 
                     <!---->
-                    <div class="flex flex-row h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-r-lg p-4 justify-between leading-normal">
+                    <div class="flex flex-row w-full h-80 border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-r-lg p-4 justify-between leading-normal">
                       
                         <!--Text within card-->
                       <div class="h-full pl-4 pr-24 flex flex-col justify-between leading-normal">
@@ -80,7 +76,7 @@
                             Gender: <%= user.gender %>
                           </p>
                           <p>
-                            Class: <% user.class_year %>
+                            Class: need to add this in /signup
                           </p>
                         </div>
 
